# rust-web-app

./: .gitignore  Cargo.toml  EAG_Calude_PRD_Update.md  EAG_README.md  Full-Text_Search.md  PRD.md  PRD_Claude_message.md  README.md  psql_commands.md
.cargo/: config.toml
EAG_Requirements/: EAG_Calude_PRD_Update.md  PRD.md  build_menu.content.php  build_menu.php  build_rss.content.php  build_rss.php  example.text.php  framework.config.php  menu_instructions.txt
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/docs/: config.md  lib-auth.md  pwd.md  token.md
crates/libs/lib-auth/docs/pwd/: scheme.md
crates/libs/lib-auth/src/pwd/: error.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs
crates/libs/lib-auth/src/token/: error.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/docs/: config.md  ctx.md  dev_utils.md  model.md
crates/libs/lib-core/src/model/: agent.rs  conv.rs  conv_msg.rs  conv_user.rs  error.rs  user.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs
crates/libs/lib-rpc-core/: Cargo.toml
crates/libs/lib-rpc-core/docs/: error.md  lib.md  prelude.md  rpc_params.md  rpc_result.md  utils_macro_utils.md
crates/libs/lib-rpc-core/src/: error.rs  prelude.rs  rpc_params.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/docs/: b64.md  envs.md  time.md
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/docs/: error.md  handlers_login.md  handlers_rpc.md  log.md  mod.md  mw_auth.md  mw_req_stamp.md  mw_res_map.md  routes_static.md  token.md
crates/libs/lib-web/src/: error.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs  mw_res_map.rs
crates/services/web-server/: Cargo.toml  leptos_axum_integration.md
crates/services/web-server/bindings/: Agent.d.ts  Conv.d.ts  ConvKind.d.ts  ConvMsg.d.ts  ConvState.d.ts  ConvUser.d.ts  ParamsForUpdate.d.ts  ParamsIded.d.ts  User.d.ts  UserTyp.d.ts  lib_auth_Error.d.ts  lib_auth_pwd_Error.d.ts  lib_auth_token_Error.d.ts  lib_core_Error.d.ts  lib_core_dbx_Error.d.ts  lib_rpc_core_Error.d.ts  lib_web_Error.d.ts  lib_web_middleware_Error.d.ts
crates/services/web-server/docs/: config.md  exmpl_quick_dev.md  web-server_main.md  web_rpcs_agent_rpc.md  web_rpcs_conv_rpc.md
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/web/: mod.rs  routes_rpc.rs  routes_ws.rs
crates/services/web-server/src/web/rpcs/: conv_rpc.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/doc/: gen-key.md
crates/tools/gen-key/src/: main.rs
planning/: full_stack_integration.md  full_stack_plan.txt
