[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils",      # e.g., base64, time.
    "crates/libs/lib-rpc-core",   # e.g., core rpc utils (using rpc-router crate)
    "crates/libs/lib-auth",       # e.g., for pwd, token.
    "crates/libs/lib-core",       # e.g., model, ctx, config.
    "crates/libs/lib-web",        # e.g., logging, common middleware etc

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",
]

[workspace.lints.clippy]
# priority = -1 # Lower priority allows overrides
all = { level = "warn", priority = -1 }         # Enable `all` lint group at warning level
# pedantic = { level = "warn", priority = -1 }    # Enable `pedantic` lint group at warning level
# nursery = { level = "warn", priority = -1 }     # Enable `experimental` lint group at warning level
# cargo = { level = "warn", priority = -1 }       # Enable `cargo` lint group at warning level
#
# Clippy overrides
result_large_err = "allow"
uninlined_format_args = "allow"
#
# Individual files or lines
# #[allow(clippy::result_large_err)]
#
# Command line
# cargo clippy --workspace --all-targets --all-features
# Add -- -D warnings to enforce warnings as errors

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3"] }
# -- Data
# Note: we lock modql version during rcs
modql = { version = "0.4.1", features = ["with-sea-query"]}
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-time" ] }
# -- JSON-RPC
# Lock to specific version during 0.1.x
rpc-router = { version = "=0.2.0-alpha.1" } 
# -- Web
axum = {version = "0.8", features = ["macros"]}
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
# -- Others
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
