[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}

argon2 = {version="0.5", features=["std"]}
blake3 = "1.5.5"
derive_more = { workspace = true }
enum_dispatch = "0.3"
hmac = "0.12"
lazy-regex = "3"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = {version = "1", features = ["v4","fast-rng",]}
