[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }

argon2 = { workspace = true, features = ["std"] }
blake3 = { workspace = true }
derive_more = { workspace = true }
enum_dispatch = { workspace = true }
hmac = { workspace = true }
lazy-regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4","fast-rng",] }
