[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[features]
with-rpc = ["rpc-router"]

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}

derive_more = { workspace = true }
modql = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = {version = "1", features = ["v4","fast-rng",]}

# -- Feature: with-rpc
rpc-router = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3"
