[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[features]
with-rpc = ["rpc-router"]

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }

derive_more = { workspace = true }
modql = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
rpc-router = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4","fast-rng",] }

[dev-dependencies]
serial_test = "3.3.1"
