[package]
name = "lib-rpc-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core", features = ["with-rpc"] }

derive_more = { workspace = true }
futures = "0.3"
modql = { workspace = true }
paste = "1"
rpc-router = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
tokio = { version = "1", features = ["full"] }
