[package]
name = "lib-rpc-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core", features = ["with-rpc"] }

derive_more = { workspace = true }
futures = { workspace = true }
modql = { workspace = true }
pastey = { workspace = true }
rpc-router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true, features = ["full"] }
