[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-rpc-core = { path = "../../libs/lib-rpc-core"}
lib-auth = { path = "../../libs/lib-auth"}
lib-core = { path = "../../libs/lib-core"}
lib-web = { path = "../../libs/lib-web"}

axum = { workspace = true }
derive_more = { workspace = true }
rpc-router = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
strum_macros = "0.26"
time = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1", features = ["v4","fast-rng",]}

[dev-dependencies]
httpc-test = "0.1"
